--- a/package.json
+++ b/package.json
@@ -45,8 +45,9 @@
     "babel-preset-react": "^6.11.1",
     "eslint": "^3.10.1",
     "eslint-config-airbnb": "^13.0.0",
+    "eslint-plugin-flowtype-errors": "^1.5.0",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^3.0.1",
+    "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^6.7.1",
     "eslint-plugin-react-native": "^2.0.0",
     "flow-bin": "^0.34.0",
